Fixed datetime display on info tab

--- a/code/Android/app/src/main/res/layout/info.xml
+++ b/code/Android/app/src/main/res/layout/info.xml
@@ -126,7 +126,7 @@
 
                 <TextView
                     style="@style/InfoLabel"
-                    android:text="Date/Time (UTC): " />
+                    android:text="Date/Time: " />
 
                 <TextView
                     android:id="@+id/textDateTime"
