Updated setting page

--- a/code/ESP32/main/include/IOT.htm
+++ b/code/ESP32/main/include/IOT.htm
@@ -18,7 +18,7 @@ const char *redirect_html PROGMEM = R"rawliteral(
 )rawliteral";
 
 const char update_html[] PROGMEM = R"rawliteral(
-    <!DOCTYPE html><html lang=\"en\"><head><meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
+    <!DOCTYPE html><html lang=\"en\"><head><meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no, charset=utf-8">
     <title>Firmware Update</title>
     </head><body>
     <h1>Firmware Update</h1>
@@ -57,9 +57,9 @@ const char network_config_top[] PROGMEM = R"rawliteral(
         }
         function showMBFields() {
             document.querySelectorAll('#modbusSelector-container > div').forEach(div => div.classList.add('hidden'));
-            var selectedValue = document.getElementById('modbusModeSelector').value;
-            if (selectedValue) {
-                document.getElementById(selectedValue + '-fields').classList.remove('hidden');
+            var selectedFld = document.getElementById('modbusModeSelector');
+            if (selectedFld) {
+                document.getElementById(selectedFld.value + '-fields').classList.remove('hidden');
             }
             toggleMDBridgeFieldset();
         }
@@ -96,7 +96,9 @@ const char network_config_top[] PROGMEM = R"rawliteral(
         function toggleMDBridgeFieldset() {
           const selector = document.getElementById("modbusModeSelector");
           const fieldset = document.getElementById("modbusBridge");
-          fieldset.classList.toggle("hidden", selector.value === "rtu");
+          if (fieldset) {
+            fieldset.classList.toggle("hidden", selector.value === "rtu");
+          }
         }
 
         window.onload = function() {
@@ -115,7 +117,7 @@ const char network_config_top[] PROGMEM = R"rawliteral(
           if (dhcpEl) {
             dhcpCheck(dhcpEl);
           }
-          
+          {onload}
 		    }
         function validateInputs() {
             {validateInputs}
@@ -127,7 +129,7 @@ const char network_config_top[] PROGMEM = R"rawliteral(
     </head>
     <body>
       <div id="config">
-      <div>
+      <div id="hdr">
           <h2>{n}</h2>
           <div class="ver">Firmware version '{v}'</div>
           <hr>
@@ -136,7 +138,7 @@ const char network_config_top[] PROGMEM = R"rawliteral(
 )rawliteral";
 
 const char network_config[] PROGMEM = R"rawliteral(
-<form onsubmit="return validateInputs()" action='/submit' method='post'>
+<form id="settingsForm" onsubmit="return validateInputs()" action='/submit' method='post'>
 <fieldset id="network" class="fs">
   <legend>Network</legend>
 
@@ -334,25 +336,25 @@ const char config_modbusBridge[] PROGMEM = R"rawliteral(
 )rawliteral";
 
 const char config_apply_button[] PROGMEM = R"rawliteral(
+  <div class="actions">
     <button type="submit" >Apply</button>
-    </form>
+  </div>
+  </form>
 )rawliteral";
 
 const char config_links[] PROGMEM = R"rawliteral(
-        <div class="link-row">
-          <a href='/'>Home page</a>
-          <a href='/update'>Firmware update</a>
-          <a href='/reboot'>Reboot</a>
-        </div>
-
-    </body></html>
+  <div class="link-row">
+    <a href='/'>Home page</a>
+    <a href='/update'>Firmware update</a>
+    <a href='/reboot'>Reboot</a>
+  </div>
+  </body></html>
 )rawliteral";
 
 const char config_links_no_ota[] PROGMEM = R"rawliteral(
-        <div class="link-row">
-          <a href='/'>Home page</a> 
-          <a href='/reboot'>Reboot</a> 
-        </div>
-
-    </body></html>
+  <div class="link-row">
+    <a href='/'>Home page</a> 
+    <a href='/reboot'>Reboot</a> 
+  </div>
+  </body></html>
 )rawliteral";
